--- a/composer.json
+++ b/composer.json
@@ -6,6 +6,9 @@
         "php": ">=7.4",
         "vlucas/phpdotenv": "^5.5"
     },
+    "require-dev": {
+        "phpunit/phpunit": "^9.0"
+    },
     "autoload": {
         "psr-4": {
             "PlanWise\\": "classes/"
