--- a/composer.json
+++ b/composer.json
@@ -4,7 +4,8 @@
     "type": "project",
     "require": {
         "php": ">=7.4",
-        "vlucas/phpdotenv": "^5.5"
+        "vlucas/phpdotenv": "^5.5",
+        "tecnickcom/tcpdf": "^6.6"
     },
     "require-dev": {
         "phpunit/phpunit": "^9.0"
