--- a/composer.json
+++ b/composer.json
@@ -5,7 +5,8 @@
     "require": {
         "php": ">=7.4",
         "vlucas/phpdotenv": "^5.5",
-        "tecnickcom/tcpdf": "^6.6"
+        "tecnickcom/tcpdf": "^6.6",
+        "chillerlan/php-qrcode": "^5.0"
     },
     "require-dev": {
         "phpunit/phpunit": "^9.0"
