--- a/composer.json
+++ b/composer.json
@@ -6,7 +6,8 @@
         "php": ">=7.4",
         "vlucas/phpdotenv": "^5.5",
         "tecnickcom/tcpdf": "^6.6",
-        "chillerlan/php-qrcode": "^5.0"
+        "chillerlan/php-qrcode": "^5.0",
+        "phpoffice/phpword": "^1.2"
     },
     "require-dev": {
         "phpunit/phpunit": "^9.0"
