--- a/render.yaml
+++ b/render.yaml
@@ -1,9 +1,9 @@
 services:
   - type: web
     name: planwise
-    runtime: php
-    buildCommand: composer install --no-dev --optimize-autoloader
-    startCommand: php -S 0.0.0.0:$PORT -t public
+    runtime: docker
+    dockerfilePath: ./Dockerfile
+    dockerContext: ./
     envVars:
       - key: APP_ENV
         value: production
